<resources>
    <string name="app_name">Space Dig</string>

    <string name="apod">APOD</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="copyright">Copyright</string>
    <string name="poweredby">Powered by NASA and Google</string>
    <string name="author">Developed by Dilip Kumar S</string>
    <string name="imagesby">Static Images from Pixabay</string>
    <string name="mars_rover">Mars Rover</string>]
    <string name="error">Connection failed</string>
    <string name="error_message">Whoops, something went wrong please try again later</string>

    <string name="action_share">Share</string>
    <string name="share_type" translatable="false">text/plain</string>
    <string name="share_title">Share Space Dig</string>

    <string name="landing_date">Landing date:</string>
    <string name="status">Status:</string>
    <string name="launch_date">Launch date:</string>
    <string name="earth_date">Earth Date:</string>
    <string name="quaternions">Attitude Quaternions:</string>
    <string name="lunar_position">Lunar J2000 Position:</string>
    <string name="dscovr_position">Dscovr J2000 Position:</string>
    <string name="sun_position">Sun J2000 Position:</string>
    <string name="centroid_coordinates">Centroid Coords:</string>

    <string name="search_hint">Enter Search words</string>
    <string name="search_results">Search Results</string>
    <string name="search_title">Search through NASA Database for images and videos</string>

    <string name="neo">Near Earth Object</string>
    <string name="hazardous_asteroid">Hazardous asteroid:</string>
    <string name="absolute_magnitude">Absolute Magnitude:</string>
    <string name="estimated_diameter">Estimated diameter</string>
    <string name="feet">Feet:</string>
    <string name="kilometers">Kilometers:</string>
    <string name="miles">Miles:</string>
    <string name="meters">Meters:</string>
    <string name="orbital_data">Orbital data</string>
    <string name="equinox">Equinox:</string>
    <string name="mean_anomaly">Mean anomaly:</string>
    <string name="mean_motion">Mean motion:</string>

    <string name="orbit_determination_date">Orbit determination date:</string>
    <string name="orbit_uncertainty">Orbit uncertainty:</string>
    <string name="minimum_orbit_intersection">Minimum orbit intersection:</string>
    <string name="jupiter_tisserand_invariant">Jupiter tisserand invariant:</string>
    <string name="epoch_osculation">EPOCH osculation:</string>
    <string name="eccentricity">Eccentricity:</string>
    <string name="semi_major_axis">Semi major axis:</string>
    <string name="inclination">Inclination:</string>
    <string name="ascending_node_longitude">Ascending node longitude:</string>
    <string name="orbital_period">Orbital period:</string>
    <string name="perihelion_distance">Perhielion distance:</string>
    <string name="aphelion_distance">Aphelion distance:</string>
    <string name="perihelion_time">Perihelion time:</string>
    <string name="close_approach">Close approach</string>
    <string name="relative_velocity">Relative velocity</string>
    <string name="kilometers_per_hour">Kilometers per hour:</string>
    <string name="kilometers_per_second">Kilometers per second:</string>
    <string name="miles_per_hour">Miles per hour:</string>
    <string name="collision_approach_short_description">Distance:</string>
    <string name="collision_approach">Collision Approach Data</string>

    <string name="media_type">Type:</string>
    <string name="created">Created on:</string>
    <string name="epic">Earth Polychromatic Imaging Camera</string>
    <string name="loading">Loading</string>
    <string name="view_full_screen">View as full screen</string>

    <string name="information">Information</string>
    <string name="share_content">Check out SPACE DIG, your space explorer available only on Google Play Store</string>

    <array name="main_list_images">
        <item>@drawable/block_1</item>
        <item>@drawable/block_2</item>
        <item>@drawable/block_3</item>
        <item>@drawable/block_4</item>
        <item>@drawable/block_5</item>
        <item>@drawable/block_6</item>
        <item>@drawable/block_7</item>
    </array>


    <string-array name="main_list_names">
        <item>Mars Rover</item>
        <item>APOD</item>
        <item>Earth Imagery</item>
        <item>EPIC</item>
        <item>Search</item>
        <item>CAD</item>
        <item>NEO</item>
    </string-array>

    <string-array name="main_list_information">
        <item>Allows you to view images taken by Mars rover where the sols range from 1 to 1000</item>
        <item>APOD which stands for astronomical picture of the day does exactly what it says.</item>
        <item>Earth Imagery, select the location of your choice and see the image through the eyes of the satellite.</item>
        <item>Provides information on the daily imagery collected by DSCOVR\'s Earth Polychromatic Imaging Camera (EPIC) instrument.</item>
        <item>Search through the wide database of NASA.</item>
        <item>CAD which stands for Close Approach Data, provides access to current close-approach data for all asteroids and comets.</item>
        <item>Near Earth Objects which provides Asteroid information near earth.</item>
    </string-array>
    <string name="title_generalitem_list">GeneralItems</string>
    <string name="title_generalitem_detail">GeneralItem Detail</string>
    <string name="title_activity_maps_location">Map</string>

    <!--Analytics logging-->
    <string name="analytics_share" translatable="false">Share</string>
    <string name="analytics_about" translatable="false">About</string>
    <string name="analytics_apod" translatable="false">APOD</string>
    <string name="analytics_mars" translatable="false">Mars Rover</string>
    <string name="analytics_epic" translatable="false">EPIC</string>
    <string name="analytics_cad" translatable="false">CAD</string>
    <string name="analytics_neo" translatable="false">NEO</string>
    <string name="analytics_earth_imagery" translatable="false">Earth Imagery</string>
    <string name="analytics_search" translatable="false">Search</string>
    <string name="add_widget">Add widget</string>

    <string name="privacy_policy">Privacy Policy</string>

    <string name="main_list_image">Main List</string>
    <string name="full_image">Full image for the details</string>
</resources>
