<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="iamdilipkumar.com.spacedig.ui.activities.SpaceListActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_main_staggered"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/space_dig_initial"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
</RelativeLayout>
