...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/keyline_1"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/tv_full_screen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/keyline_2"
                android:layout_marginTop="@dimen/keyline_2"
                android:text="@string/view_full_screen"
                android:textColor="@color/colorAccent" />
...
