...
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="@dimen/regular_body"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_search_title"
        android:layout_margin="@dimen/keyline_1"
        android:background="@drawable/radius_white_background"
...
